--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,25 @@
 # Site settings
 title: YRPI-devtest
 description: |
-  Lorem ipsum dolor sit amet.
+  Yayasan Rumah Pengharapan Indonesia
 owner: YRPI-devtest
 first_published: 2019
 email: yosuadavid@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
+#defaults:
+#  -
+#    scope:
+#      path: "kegiatan"
+#      type: "pages"
+#    values:
+#      layout: "page"
+
+# Collections
+collections:
+  kegiatan:
+    output: true
+
 social:
   #twitter: https://twitter.com/<username>
   #github: https://github.com/<username>
